force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <label>Salary</label>
    <nameField>
        <displayFormat>PAY-{0000}</displayFormat>
        <label>Salary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>