force-app/main/default/objects/Salary__c/fields/Actual_Pay__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pay__c</fullName>
    <label>Actual Pay</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>