force-app/main/default/objects/Salary__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Salaries</relationshipLabel>
    <relationshipName>Salaries</relationshipName>
    <type>Lookup</type>
</CustomField>